sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: Boolean does not take parameters
        echange(i:Int,i+1:Int)
               ^AlgBubbleSort1:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
       return true
              ^AlgBubbleSort1:9: warning: enclosing method bubbleSort has result type Unit: return value discarded
       return true
       ^